// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Viewing 0 expenses 1`] = `
<Fragment>
  <div>
    Add expense
  </div>
</Fragment>
`;

exports[`Viewing 1 expenses to talling $94.34 1`] = `
<Fragment>
  <div>
    <div>
      Summary
    </div>
    <p>
      <strong>
         Expenses available: 
      </strong>
      1
    </p>
    <p>
      <strong>
         Expenses Total: 
      </strong>
      $94.34
    </p>
  </div>
</Fragment>
`;

exports[`Viewing 2 expenses to talling $94.34 1`] = `
<Fragment>
  <div>
    <div>
      Summary
    </div>
    <p>
      <strong>
         Expenses available: 
      </strong>
      2
    </p>
    <p>
      <strong>
         Expenses Total: 
      </strong>
      $94.34
    </p>
  </div>
</Fragment>
`;
